k8s-kustomization/base/kubernetes.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilidade-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mobilidade-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mobilidade-api
    spec:
      containers:
        - name: mobilidade-api
          image: gcr.io/PROJECT_ID/IMAGE_API:TAG
          ports:
            - containerPort: 80
      restartPolicy: Always
---
# Deployment django-q
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilidade-rio-api-django-q
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobilidade-api-django-q
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mobilidade-api-django-q
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mobilidade-api-django-q
      containers:
        - name: mobilidade-api-django-q
          image: gcr.io/PROJECT_ID/IMAGE_API_DJANGO_Q:TAG
          ports:
            - containerPort: 80
      restartPolicy: Always
---
# API service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mobilidade-api
  name: mobilidade-api
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: mobilidade-api

---
# API Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilidade-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.mobilidade.rio
      secretName: api-mobilidade-tls
  rules:
    - host: api.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilidade-api
                port:
                  number: 80

---
# DB service
kind: Service
apiVersion: v1
metadata:
  name: db
spec:
  type: ExternalName
  externalName: citus-master.dagster.svc.cluster.local
  ports:
    - port: 5432
# trigger cd
